# error-guided-sft-data-selection

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: adversarial_review_protocol.md  adversarial_review_rubric_cn.md  adversarial_review_v0.md  claim_evidence_ledger.md  code_map.md  code_takeover_guide.md  code_takeover_scorecard.md  contribution_statement.md  data_generation_spec.md  data_quality_audit.md  github_setup.md  index.html  literature_review.md  model_feasibility_qwen2_5.md  parser_v2_rescore_cn.md  professor_research_note_en.md  professor_results_summary.md  professor_summary_1p.md  project_spec.md  public_release_scope.md  qwen_0_5b_rescue_gate_cn.md  qwen_0_5b_rescue_results_cn.md  real_error_analysis_cn.md  reproducibility.md  research_note_jinke_fangxin_shuang.md  research_note_xiao_mengnan_benyou.md  research_note_zhen.md  research_summary_1p.md  results_index.md  reviewer_external_evidence_policy_cn.md  selection_policy_spec.md  strong_baseline_design.md  workflow.md  workflow_cn.md
results/: base_diagnostic_results.csv  error_profile_by_error_type_v0.csv  error_profile_v0.csv  main_results_v0.csv  qwen2_5_0_5b_smoke.json  real_base_diagnostic_outputs.jsonl  real_base_diagnostic_run_metadata.json  real_base_diagnostic_summary.csv  real_error_profile.csv  real_error_profile_by_type.csv  real_parser_audit_examples.csv  real_parser_audit_examples_cn.csv  real_parser_audit_examples_cn_with_prompts.csv  real_parser_audit_summary.csv  selection_bias_audit.csv  selection_bias_summary.csv  split_leakage_audit.csv  (+2 more)
scripts/: audit_splits.py  (+19 more)
(+104 files in other folders)
