[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "error-guided-sft-data-selection"
version = "0.1.0"
description = "Error-guided data selection for data-efficient LoRA SFT in small numerical reasoning language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
train = [
  "torch",
  "transformers",
  "datasets",
  "peft",
  "accelerate",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
